# openshift-ai-unified-retail-demo

./: .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml
agents/: base_agent.py  crew_config.yaml  customer_agents.py  home_agent.py  inventory_agent.py  pricing_agent.py  trend_agent.py
agents/tools/: fashion_tools.py  search_tools.py
data/: customers.json  fashion_trends.json  meridian_products.json  sa_market_data.json
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  MCP_INTEGRATION.md  MULTI_AGENT_DESIGN.md
k8s/base/: configmap.yaml  kustomization.yaml  llm-server-deployment.yaml  llm-server-service.yaml  namespace.yaml  priming-job.yaml  secret.yaml
k8s/configmaps/: mcp-servers-config.yaml  streamlit-ui-config.yaml
k8s/deployments/: analytics-server-deployment.yaml  llm-server-deployment.yaml  rag-server-deployment.yaml  search-server-deployment.yaml  streamlit-ui-deployment.yaml
k8s/overlays/local/: deployment-patch.yaml  kustomization.yaml
k8s/services/: analytics-server-service.yaml  llm-server-service.yaml  rag-server-services.yaml  search-server-service.yaml  streamlit-ui-service.yaml
mcp_servers/: analytics_server.py  llm_server.py  rag_server.py  search_server.py
meridian_retail_ai_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rag/: embeddings.py  knowledge_base.py  retriever.py
scripts/: cleanup.sh  deploy-local.sh  deploy-openshift.sh  prime_database.py  run-tests.sh  setup.sh
streamlit_app/: app.py
streamlit_app/components/: agent_status.py  chat_interface.py
streamlit_app/pages/: 1_Dashboard.py
tests/integration/: test_home_agent_agent_orchestration.py  test_home_agent_orchestration.py  test_trend_agent_integration.py
tests/unit/: test_analytics_server.py  test_base_agent.py  test_customer_agent.py  test_home_agent.py  test_inventory_agent.py  test_llm_server.py  test_pricing_agent.py  test_rag_server.py  test_search_server.py  test_trend_agent.py
(+3 files in other folders)
